# dimoprasies

./: .dockerignore  .gitignore  AGENTS.md  COPY_PASTE_CONTINUE_MESSAGE.txt  COPY_PASTE_FIRST_MESSAGE.txt  Dockerfile  FULL_CODEX_KIT_COMBINED.md  MANIFEST.txt  PLANS.md  README.md  README_FIRST_REMOTE.md  START_HERE.md  Tender Radar UI - LAN.cmd  Tender Radar UI - Tailscale.cmd  Tender Radar UI - Tailscale.ps1  Tender Radar UI.cmd  compose.yaml  pyproject.toml
config/: deduplication.yml  diavgeia_entalmata.yml  document_types.yml  locations.yml  public_works_taxonomy.yml  search_request.template.yml  sources.yml
docs/: AVAILABLE_MECHANISMS.md  DECISIONS.md  DEDUPLICATION.md  EXECPLAN_SOURCE_AUDIT.md  EXECPLAN_UI_REDESIGN.md  HANDOFF.md  IMPLEMENTATION_PHASES.md  INDEX.md  KNOWN_LIMITATIONS.md  PRODUCT_SPECIFICATION.md  PROGRESS.md  SOURCE_AUDIT.md  SOURCE_WHITELIST.md  SYNOLOGY_DEPLOY.md
tasks/: 00_BOOTSTRAP.md  01_SOURCE_AUDIT.md  02_VERTICAL_SLICE.md  03_GEOGRAPHIC_MVP.md  04_DOCUMENT_PIPELINE.md  05_REVERSE_SEARCH.md  06_CHANGE_DETECTION.md  07_HARDENING_AND_SCHEDULING.md  NEXT_TASK.md
tests/: test_ai_triage.py  test_authority.py  test_cli.py  test_config.py  test_db.py  test_discovery.py  test_discovery_watermark.py  test_documents.py  test_entalmata.py  test_evaluation.py  test_expanded_report.py  test_kimdis_connected_acts.py  test_kimdis_fetch.py  test_matching.py  test_pricing.py  test_source_whitelist.py  test_sources.py  test_status.py  test_ui_server.py
tools/: eshidis_browser_audit.py  eshidis_download_audit.py  eshidis_resource_audit.py
(+33 files in other folders)
